fix(mobile-btns&markers): fixed appearance on safari engine and remove markers on mobile with another approach

--- a/assets/main-collection-product-grid.css
+++ b/assets/main-collection-product-grid.css
@@ -35,11 +35,18 @@
     font-family: 'Cormorant Unicase', serif;
 }
 
+.collection-product-grid__sort-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #SortBy {
     font-size: 0.9rem;
     text-transform: uppercase;
     font-family: 'Cormorant Unicase', serif;
     border: none;
+    appearance: none;
     outline: none;
 }
 
@@ -91,7 +98,11 @@ summary {
     cursor: pointer;
 }
 
-summary::-webkit-details-marker ,summary::marker {
+summary::-webkit-details-marker {
+    display: none !important;
+}
+
+summary::marker {
     content: none !important;
 }
 
@@ -314,7 +325,8 @@ mobile-drawer {
     display: none;
 }
 
-.mobile-drawer-filters__btns-wrapper ,#mobile-drawer-filters__filter-tags {
+.mobile-drawer-filters__btns-wrapper,
+#mobile-drawer-filters__filter-tags {
     display: none;
 }
 
@@ -402,22 +414,37 @@ mobile-drawer {
         width: 100%;
     }
 
-    mobile-drawer summary::-webkit-details-marker ,mobile-drawer summary::marker {
+    mobile-drawer summary::-webkit-details-marker {
+        display: none !important;
+    }
+
+    mobile-drawer summary::marker {
         content: none !important;
     }
 
-    #SortByMobile {
+    .mobile-drawer-filters__sort-div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         width: 100%;
         height: 7vh;
         padding: 0 2vh;
         background-color: #494949;
+    }
+
+    #SortByMobile {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
         color: white;
         font-size: 0.9rem;
         font-weight: 600;
         text-align: center;
         border: none;
         border-radius: 0;
-        cursor: pointer;
+        appearance: none;
+        outline: none;
         transition: all 0.3s ease;
     }
 
